--- a/Zasm/appsettings.json.sample
+++ b/Zasm/appsettings.json.sample
@@ -1,10 +1,45 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Application": {
+    "Url": "https://localhost:5008",
+    "PathBase": "/"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=zasm;Username=cysun;Password=abcd"
+  },
+  "OIDC": {
+    "Authority": "https://localhost:5001",
+    "ClientId": "zasm",
+    "ClientSecret": "abcd"
+  },
+  "Files": {
+    "Directory": "D:/Temp/Zasm/files",
+    "AttachmentTypes": [ ".doc", ".docx", ".ppt", ".pptx", ".xls", ".xlsx" ],
+    "TextTypes": [ ".java", ".sql" ]
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.File"
+    ],
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:/Temp/Zasm/logs/log.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": null
+        }
+      }
+    ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "Enrich": [
+      "FromLogContext"
+    ]
   },
   "AllowedHosts": "*"
 }
