--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@
 indent_style = space
 charset = utf-8
 # Code files
-[*.{cs,csx,vb,vbx}]
+[*.{cs,csx,vb,vbx,cshtml}]
 indent_size = 4
 insert_final_newline = true
 charset = utf-8-bom
